--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -18,7 +18,7 @@
     display: flex;
     align-items: flex-start;
     gap: 16px;
-    padding: 16px;
+    padding: 8px 16px;
     cursor: pointer;
     transition: background-color 0.2s ease;
     
