--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -100,7 +100,7 @@ ion-card {
 }
 
 ion-item {
-  --background: var(--app-input-background);
+  --background: transparent;
   --border-color: var(--app-input-border);
 }
 
