--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -50,6 +50,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 4px;
 
         .scope-icon {
           font-size: 20px;
@@ -61,6 +62,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 4px;
 
         .state-icon {
           font-size: 20px;
