--- a/src/theme/shared-project-styles.scss
+++ b/src/theme/shared-project-styles.scss
@@ -9,7 +9,7 @@
 }
 
 .project-description {
-  margin-top: 8px !important;
+  margin: 4px 0 8px 0 !important;
   padding-left: 8px;
   border-left: 2px solid var(--ion-color-primary);
   font-size: 15px !important;
