--- a/src/app/components/messages/messages.component.scss
+++ b/src/app/components/messages/messages.component.scss
@@ -136,24 +136,23 @@
   }
 }
 
-@media (max-width: 576px) {
-  .messages-container {
-    padding: 12px;
-  }
-  
-  .messages-list ion-item {
-    --padding-start: 12px;
-    --padding-end: 12px;
-    --padding-top: 12px;
-    --padding-bottom: 12px;
-    
-    ion-avatar {
-      width: 40px;
-      height: 40px;
-      
-      ion-icon {
-        font-size: 20px;
-      }
+/* Mobile adjustments for messages (applied globally) */
+.messages-container {
+  padding: 12px;
+}
+
+.messages-list ion-item {
+  --padding-start: 12px;
+  --padding-end: 12px;
+  --padding-top: 12px;
+  --padding-bottom: 12px;
+
+  ion-avatar {
+    width: 40px;
+    height: 40px;
+
+    ion-icon {
+      font-size: 20px;
     }
   }
 }
