--- a/src/app/components/project-footer/project-footer.component.scss
+++ b/src/app/components/project-footer/project-footer.component.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 6px;
     gap: 4px;
 
     .vote-group {
