--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -97,5 +97,5 @@
       <div class="project-date">
         <span class="date-text">{{ getFormattedDate() }}</span>
       </div>
-  <hr style="width: 100%; border-top: 0.5px solid var(--ion-color-light-shade); opacity: 0.15; margin-top: 8px; margin-bottom: 0px;">
+        <hr style="width: 100%; border-top: 0.5px solid var(--app-divider, #e0e0e0); opacity: 1; margin-top: 8px; margin-bottom: 0px;">
 </ion-card>
