--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -81,14 +81,15 @@
         padding: 0;
         
         .project-title-section {
-          .project-title {
-            margin: 0;
+            .project-title {
+            margin: 0 0 0 12px;
             display: -webkit-box;
             line-clamp: 2;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
+            color: var(--app-text-secondary);
           }
         }
       }
@@ -252,7 +253,7 @@
         border-top: 1px solid var(--app-border-color);
         background: transparent;
         margin: 0 0 0 8px;
-        border-left: 3px solid var(--ion-color-primary);
+        border-left: 2px solid var(--ion-color-secondary);
         border-radius: 0 8px 8px 0;
 
         .comments-header,
