--- a/src/app/components/project-footer/project-footer.component.scss
+++ b/src/app/components/project-footer/project-footer.component.scss
@@ -55,7 +55,7 @@
   border-top: 1px solid var(--app-border-color);
   background: transparent;
   margin: 0 0 0 8px;
-  border-left: 3px solid var(--ion-color-primary);
+  border-left: 2px solid var(--app-text-secondary);
   border-radius: 0 8px 8px 0;
 
   .comments-header,
