--- a/src/theme/shared-project-styles.scss
+++ b/src/theme/shared-project-styles.scss
@@ -11,7 +11,7 @@
 .project-description {
   margin: 4px 0 8px 0 !important;
   padding-left: 8px;
-  border-left: 2px solid var(--ion-color-primary);
+  border-left: 2px solid var(--app-user-project-border);
   font-size: 14px !important;
   line-height: 1.6 !important;
   letter-spacing: 0.05em;
