--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -60,3 +60,10 @@ ion-modal {
     margin-bottom: 16px;
   }
 }
+
+.register-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
