--- a/src/app/private-inner-project/private-inner-project.component.html
+++ b/src/app/private-inner-project/private-inner-project.component.html
@@ -35,16 +35,11 @@
 
           <div class="info-row">
             <div class="info-content">
-              <ion-chip color="primary" class="scope-chip">
+              <ion-chip color="primary" class="scope-location-chip">
                 <ion-icon [name]="getScopeIcon(project()?.scope || '')"></ion-icon>
                 {{ getScopeLabel(project()?.scope || '') }}
+                <ng-container *ngIf="project()?.scope?.place">: {{ project()?.scope?.place }}</ng-container>
               </ion-chip>
-              @if (project()?.scope?.place) {
-                <ion-chip color="secondary">
-                  <ion-icon name="location-outline" slot="start"></ion-icon>
-                  {{ project()?.scope?.place }}
-                </ion-chip>
-              }
               <ion-chip 
                 [color]="getStateColor(project()?.state || 'building')"
                 class="state-chip" 
