--- a/src/app/public-inner-project/public-inner-project.component.scss
+++ b/src/app/public-inner-project/public-inner-project.component.scss
@@ -94,6 +94,24 @@ ion-header {
           font-size: 14px;
         }
       }
+
+      .scope-location-chip {
+        font-size: 14px;
+        font-weight: 500;
+        padding-right: 16px;
+        min-width: 160px;
+        --background: var(--app-primary);
+        --color: white;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        
+        ion-icon {
+          color: var(--ion-color-primary);
+          margin-right: 6px;
+          font-size: 14px;
+        }
+      }
     }
   }
 
